fix: no scrollreveal on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,6 @@ html,
 body {
 	height: 100%;
 	font-family: "Inter", sans-serif;
-	overflow-x: hidden;
 }
 
 body {
